jobs/job_60783810/uncert/errors/benchmark_611/solver_2.txt
/hpcwork/ff862203/termcomp25/benchmarks/4mPw9.c:391:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g1v_new = nomsg != nomsg && g1v_new == nomsg ? nomsg : g1v_new;
                    ^
/hpcwork/ff862203/termcomp25/benchmarks/4mPw9.c:422:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g2v_new = nomsg != nomsg && g2v_new == nomsg ? nomsg : g2v_new;
                    ^
/hpcwork/ff862203/termcomp25/benchmarks/4mPw9.c:453:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g3v_new = nomsg != nomsg && g3v_new == nomsg ? nomsg : g3v_new;
                    ^
3 warnings generated.
INFO: Pointer analysis took 0 sec 46 ms
input.cc:391:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g1v_new = nomsg != nomsg && g1v_new == nomsg ? nomsg : g1v_new;
                    ^
input.cc:422:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g2v_new = nomsg != nomsg && g2v_new == nomsg ? nomsg : g2v_new;
                    ^
input.cc:453:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g3v_new = nomsg != nomsg && g3v_new == nomsg ? nomsg : g3v_new;
                    ^
3 warnings generated.
input.cc:391:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g1v_new = nomsg != nomsg && g1v_new == nomsg ? nomsg : g1v_new;
                    ^
input.cc:422:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g2v_new = nomsg != nomsg && g2v_new == nomsg ? nomsg : g2v_new;
                    ^
input.cc:453:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g3v_new = nomsg != nomsg && g3v_new == nomsg ? nomsg : g3v_new;
                    ^
3 warnings generated.
input.cc:391:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g1v_new = nomsg != nomsg && g1v_new == nomsg ? nomsg : g1v_new;
                    ^
input.cc:422:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g2v_new = nomsg != nomsg && g2v_new == nomsg ? nomsg : g2v_new;
                    ^
input.cc:453:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g3v_new = nomsg != nomsg && g3v_new == nomsg ? nomsg : g3v_new;
                    ^
input.cc:519:34: error: use of undeclared identifier 'gate1_each_pals_period_index'; did you mean 'gate1_each_pals_period'?
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                 gate1_each_pals_period
input.cc:381:6: note: 'gate1_each_pals_period' declared here
void gate1_each_pals_period(void) 
     ^
input.cc:519:69: error: use of undeclared identifier 'gate2_each_pals_period_index'; did you mean 'gate2_each_pals_period'?
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                                    gate2_each_pals_period
input.cc:412:6: note: 'gate2_each_pals_period' declared here
void gate2_each_pals_period(void) 
     ^
input.cc:519:104: error: use of undeclared identifier 'gate3_each_pals_period_index'; did you mean 'gate3_each_pals_period'?
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                                                                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                                                                       gate3_each_pals_period
input.cc:443:6: note: 'gate3_each_pals_period' declared here
void gate3_each_pals_period(void) 
     ^
input.cc:519:139: error: use of undeclared identifier 'voter_index'
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                                                                                                                          ^
3 warnings and 4 errors generated.
4mPw9_Ptr2Arr.c:391:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g1v_new = nomsg != nomsg && g1v_new == nomsg ? nomsg : g1v_new;
                    ^
4mPw9_Ptr2Arr.c:422:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g2v_new = nomsg != nomsg && g2v_new == nomsg ? nomsg : g2v_new;
                    ^
4mPw9_Ptr2Arr.c:453:21: warning: self-comparison always evaluates to false [-Wtautological-compare]
    g3v_new = nomsg != nomsg && g3v_new == nomsg ? nomsg : g3v_new;
                    ^
4mPw9_Ptr2Arr.c:519:34: error: use of undeclared identifier 'gate1_each_pals_period_index'; did you mean 'gate1_each_pals_period'?
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                 gate1_each_pals_period
4mPw9_Ptr2Arr.c:381:6: note: 'gate1_each_pals_period' declared here
void gate1_each_pals_period(void) 
     ^
4mPw9_Ptr2Arr.c:519:69: error: use of undeclared identifier 'gate2_each_pals_period_index'; did you mean 'gate2_each_pals_period'?
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                                    gate2_each_pals_period
4mPw9_Ptr2Arr.c:412:6: note: 'gate2_each_pals_period' declared here
void gate2_each_pals_period(void) 
     ^
4mPw9_Ptr2Arr.c:519:104: error: use of undeclared identifier 'gate3_each_pals_period_index'; did you mean 'gate3_each_pals_period'?
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                                                                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                                                                       gate3_each_pals_period
4mPw9_Ptr2Arr.c:443:6: note: 'gate3_each_pals_period' declared here
void gate3_each_pals_period(void) 
     ^
4mPw9_Ptr2Arr.c:519:139: error: use of undeclared identifier 'voter_index'
void (*nodes[4])(void)  = {      gate1_each_pals_period_index,      gate2_each_pals_period_index,      gate3_each_pals_period_index,      voter_index};
                                                                                                                                          ^
4mPw9_Ptr2Arr.c:592:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
4 warnings and 4 errors generated.
